--- a/01-sets_and_functions.Rmd
+++ b/01-sets_and_functions.Rmd
@@ -54,7 +54,7 @@ We then want to be able to say whether something is or isn't in the set so we wr
 
 There are some important sets which have their own symbols and names. You have probably met them before:
 
-- The natural numbers, \(\mathbb{N}= \{1,2,3,\dots\}\),
+- The natural numbers, \(\mathbb{N}= \{0, 1,2,3,\dots\}\),
 
 - The integers, \(\mathbb{Z} = \{ \dots, -3, -2, -1, 0, 1, 2, 3, \dots \}\),
 
