--- a/_main.tex
+++ b/_main.tex
@@ -80,7 +80,7 @@
 
 \title{MA132: Foundations Lecture Notes}
 \author{Jo Evans}
-\date{2024-09-29}
+\date{2024-09-30}
 
 \usepackage{amsthm}
 \newtheorem{theorem}{Theorem}[chapter]
@@ -387,7 +387,7 @@ Given a function \(f:A \rightarrow B\) then
 \item
   If \(C \subset A\) we write \(f(C) = \{y \in B \,:\, y = f(x) \, \mbox{for some} \, x \in C\}\). We call \(f(C)\) the \emph{image} of \(C\) under \(f\).
 \item
-  If \(D \in B\) we write \(f^{-1}(D)) = \{ x \in C \,:\, f(x) \in D\}\). We call \(f^{-1}(D)\) the \emph{pre-image} of \(D\) under \(f\).
+  If \(D \subset B\) we write \(f^{-1}(D)) = \{ x \in A \,:\, f(x) \in D\}\). We call \(f^{-1}(D)\) the \emph{pre-image} of \(D\) under \(f\).
 \end{itemize}
 
 \end{definition}
@@ -395,7 +395,7 @@ Given a function \(f:A \rightarrow B\) then
 \section{Properties of functions}\label{properties-of-functions}
 
 \begin{definition}[injectivity]
-A function \(f:A\rightarrow B\) is called \emph{injective} if \(f(x)=f(x')\) implies that \(x=x'\). That is to say there are no two elements of \(X\) where \(f(x)\) takes the same value, or \(y\) has at most one preimage under \(f\).
+A function \(f:A\rightarrow B\) is called \emph{injective} if \(f(x)=f(x')\) implies that \(x=x'\). That is to say there are no two elements of \(A\) where \(f(x)\) takes the same value, or \(y\) has at most one preimage under \(f\).
 \end{definition}
 
 \begin{example}
