--- a/_main.tex
+++ b/_main.tex
@@ -80,7 +80,7 @@
 
 \title{MA132: Foundations Lecture Notes}
 \author{Jo Evans}
-\date{2024-09-30}
+\date{2024-10-01}
 
 \usepackage{amsthm}
 \newtheorem{theorem}{Theorem}[chapter]
@@ -197,7 +197,7 @@ There are some important sets which have their own symbols and names. You have p
 \end{definition}
 
 \begin{definition}[equality of sets/axiom of extension]
-Two sets are equal (the same) if they have exactly the same elements. We call this the axiom of extension. We can write it in formal language as: if for every \(x \in A\) we have \(x \in B\) and for every \(y \in B\) we have \(y \in B\) then \(A=B\).
+Two sets are equal (the same) if they have exactly the same elements. We call this the axiom of extension. We can write it in formal language as: if for every \(x \in A\) we have \(x \in B\) and for every \(y \in B\) we have \(y \in A\) then \(A=B\).
 \end{definition}
 
 \begin{remark}
@@ -223,7 +223,7 @@ There are several shorthand notations used in maths and particularly in logic. S
 \end{definition}
 
 Using this we can write the axiom of extension as
-\[ \forall A \forall B ( (x \in A \Leftrightarrow x \in B) \Leftarrow (A=B)).   \] Which is a good illustration of why its often better to use words!
+\[ \forall A \forall B ( \forall x (x \in A \Leftrightarrow x \in B) \Rightarrow (A=B)).   \] Which is a good illustration of why its often better to use words!
 
 Given that sets are defined by their elements we sometimes need to consider that set that doesn't have any elements at all.
 
@@ -387,10 +387,20 @@ Given a function \(f:A \rightarrow B\) then
 \item
   If \(C \subset A\) we write \(f(C) = \{y \in B \,:\, y = f(x) \, \mbox{for some} \, x \in C\}\). We call \(f(C)\) the \emph{image} of \(C\) under \(f\).
 \item
-  If \(D \subset B\) we write \(f^{-1}(D)) = \{ x \in A \,:\, f(x) \in D\}\). We call \(f^{-1}(D)\) the \emph{pre-image} of \(D\) under \(f\).
+  If \(D \subset B\) we write \(f^{-1}(D) = \{ x \in A \,:\, f(x) \in D\}\). We call \(f^{-1}(D)\) the \emph{pre-image} of \(D\) under \(f\).
 \end{itemize}
 
 \end{definition}
+
+\begin{example}
+We have to be particularly careful with preimages as this example demonstrates
+
+Let \(f: \mathbb{R} \rightarrow \mathbb{R}\) given by \(f(x) = x^2\) then \(f^{-1}(\{2\}) = \{-\sqrt{2}, \sqrt{2}\}\).
+
+Let \(f: \mathbb{Q} \rightarrow \mathbb{Q}\) given by \(f(x) = x^2\) then \(f^{-1}(\{2\})= \emptyset\). Because \(\pm sqrt{2}\) is irrational so \(2\) has no square roots in the rationals.
+
+Let \(f: [0, \infty) \rightarrow [0, \infty)\) given by \(f(x)=x^2\) then \(f^{-1}(\{2\}) = \{\sqrt{2}\}\).
+\end{example}
 
 \section{Properties of functions}\label{properties-of-functions}
 
@@ -451,7 +461,7 @@ We say that \(A\) and \(B\) have the same \emph{cardinality} (informally the sam
 \begin{definition}[Finiteness]
 Cardinality allows us to give a rigorous notion for a set to be \emph{finite}/have a finite number of elements.
 
-Given a set \(A\), if there is some natural number \(n\) such that \(|A|=|[[n-1]]|\) then we say \(A\) has size \(n\).
+Given a set \(A\), if there is some natural number \(n\) such that \(|A|=|[[n]]|\) then we say \(A\) has size \(n\).
 
 If \(A\) has size \(n\) for some \(n\) then we say \(A\) is finite.
 \end{definition}
@@ -459,29 +469,6 @@ If \(A\) has size \(n\) for some \(n\) then we say \(A\) is finite.
 \begin{definition}[infinite]
 We say a set is \emph{infinite} if it isn't finite.
 \end{definition}
-
-Suppose \(A\) and \(B\) are finite sets with \(|A| > |B|\) and \(f: A \rightarrow B\) is a function then there exists some \(b \in B\) for which there are at least two elements \(a_1,a_2\) of \(A\) for which \(f(a_1)=f(a_2)=b\).
-
-The name for this fact comes from the idea that if you have a dovecote with \(n\) holes and you have more than \(n+1\) pigeons then however you arrange the pigeons at least one hole must contain more than one pigoen.
-
-\begin{lemma}
-
-Suppose that \(A,B\) are sets and \(B\) is finite.
-
-\begin{itemize}
-\item
-  If there exists an injection \(f: A \rightarrow B\) then \(A\) is finite.
-\item
-  If there exists a surjections \(g: B \rightarrow A\) then \(A\) is finite.
-\end{itemize}
-
-\end{lemma}
-
-\begin{proof}
-If \(B\) is finite then there is a bijection between \(B\) and some \([[n]]\) and so composing \(f\) and this bijection gives an injection form \(A\) to some subset of \([[n]]\). Let us call this injection \(j\). Now let us create a bijection from \(A\) to some \([[m]]\) as follows. The image of \(j\) is \(\{j_0, \dots, j_m\}\) so let us map \(j^{-1}(j_k)\) to \(k\) for \(k=0,\dots, m\). This shows that \(A\) is finite.
-
-Now considering the second point. We can choose a right inverse to \(g\) which we call \(h\). This will be an injection since \(g\) is a function so the first point proves that \(A\) is finite also in this case.
-\end{proof}
 
 \begin{theorem}[Cantor's Theorem]
 Let \(A\) be a set and \(f: A \rightarrow \mathcal{P}(A)\) then \(f\) cannot be a surjection.
@@ -970,28 +957,30 @@ Now for point 3 it looks at first like we can just apply the previous results. W
 Now if we want to show bijectivity of \(f\) implies we must have an inverse we not that if \(f\) is bijective then for every \(y\in B\) there exists exactly one \(x \in A\) such that \(f(x) = y\) so we can define \(g(y)\) to be this unique \(x\) and this ensures that \(g(f(x))= x\) and \(f(g(y))= y\).
 \end{proof}
 
-\begin{definition}[image and preimage]
+\begin{definition}[pigeon hole principle]
+Suppose \(A\) and \(B\) are finite sets with \(|A| > |B|\) and \(f: A \rightarrow B\) is a function then there exists some \(b \in B\) for which there are at least two elements \(a_1,a_2\) of \(A\) for which \(f(a_1)=f(a_2)=b\).
 
-Suppose that \(A, B\) are sets and \(f: A \rightarrow B\) is a function. Suppose further that \(C \subset A, D \subset B\) then we write
+The name for this fact comes from the idea that if you have a dovecote with \(n\) holes and you have more than \(n+1\) pigeons then however you arrange the pigeons at least one hole must contain more than one pigeon.
+\end{definition}
+
+\begin{lemma}
+
+Suppose that \(A,B\) are sets and \(B\) is finite.
 
 \begin{itemize}
 \item
-  \(f(C)= \{y \in B \,:\, y=f(x), \mbox{for some} \, x \in C\}\) and we call \(f(C)\) the \emph{image} of \(C\) under \(f\).
+  If there exists an injection \(f: A \rightarrow B\) then \(A\) is finite.
 \item
-  \(f^{-1}(D)= \{ x \in A \,:\, f(x) \in D\}\) and we call \(f^{-1}(D)\) the \emph{preimage} of \(D\) under \(f\).
+  If there exists a surjections \(g: B \rightarrow A\) then \(A\) is finite.
 \end{itemize}
 
-\end{definition}
+\end{lemma}
 
-\begin{example}
-We have to be particularly careful with preimages as this example demonstrates
+\begin{proof}
+If \(B\) is finite then there is a bijection between \(B\) and some \([[n]]\) and so composing \(f\) and this bijection gives an injection form \(A\) to some subset of \([[n]]\). Let us call this injection \(j\). Now let us create a bijection from \(A\) to some \([[m]]\) as follows. The image of \(j\) is \(\{j_0, \dots, j_m\}\) so let us map \(j^{-1}(j_k)\) to \(k\) for \(k=0,\dots, m\). This shows that \(A\) is finite.
 
-Let \(f: \mathbb{R} \rightarrow \mathbb{R}\) given by \(f(x) = x^2\) then \(f^{-1}(\{2\}) = \{-\sqrt{2}, \sqrt{2}\}\).
-
-Let \(f: \mathbb{Q} \rightarrow \mathbb{Q}\) given by \(f(x) = x^2\) then \(f^{-1}(\{2\})= \emptyset\). Because \(\pm sqrt{2}\) is irrational so \(2\) has no square roots in the rationals.
-
-Let \(f: [0, \infty) \rightarrow [0, \infty)\) given by \(f(x)=x^2\) then \(f^{-1}(\{2\}) = \{\sqrt{2}\}\).
-\end{example}
+Now considering the second point. We can choose a right inverse to \(g\) which we call \(h\). This will be an injection since \(g\) is a function so the first point proves that \(A\) is finite also in this case.
+\end{proof}
 
 Lastly in this section we have a deeper theorem whose proof is more complicated that those we have encountered before.
 
